--- a/css/styles.css
+++ b/css/styles.css
@@ -43,13 +43,13 @@ ul > li{
     margin: 0;
     padding: 0;
 }
-.shadow_header{
+.header__sombra{
     border-bottom:rgba(236, 236, 236, 1) 1px solid;
     
 
 }
 
-.headers_navigation{
+.header__navigation{
     display: flex;
     flex-wrap: wrap;
     text-align: center;
@@ -58,7 +58,7 @@ ul > li{
     height: 80px;
 
 }
-.menu_navigation{
+.header__menu{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -66,7 +66,7 @@ ul > li{
     height: auto;
     outline:none;
 }
-.menu_list{
+.header__list{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -77,7 +77,7 @@ ul > li{
     padding-top: 32px;
     
 }
-.menu_contact{
+.header__contact{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -91,7 +91,7 @@ ul > li{
     
 }
 
-.logo{
+.header__logo{
     color: var(--color_blue);
     font-family: Raleway;
     font-weight: 700;
@@ -158,62 +158,62 @@ ul > li{
     fill:var(--color_blue);
     color:var(--color_blue);
 }
-.icon_contacts{
+.header__contact-list{
     padding-right: 0px;
     margin-right: 30px;
     border-right-width: 10px;
     cursor: pointer;
     fill: var(--color_gray);
 }
-.icon_contacts:hover {
+.header__contact-list:hover {
     fill:var(--color_blue);
 }
-.icon_contacts:focus{
+.header__contact-list:focus{
     fill:var(--color_blue);
 }
-.icon_contacts:focus-within{
+.header__contact-list:focus-within{
     fill:var(--color_blue);
 }
-.cel_contact{
+.header__phone{
     color:var(--color_gray);
     outline: none;
 }
-.cel_contact:focus{
+.header__phone:focus{
     color:var(--color_gray);
 }
-.cel_contact:focus-within{
+.header__phone:focus-within{
     color:var(--color_blue)
 }
-.cel_contact:hover{
+.header__phone:hover{
     color:var(--color_blue);
 }
-.cel_contact:active{
+.header__phone:active{
     color: var(--color_blue);
 }
-.email_contact{
+.header__email{
     color:var(--color_gray);
     outline: none;
 
 }
-.email_contact:focus{
+.header__email:focus{
     color:var(--color_blue)
 }
-.email_contact:focus-within{
+.header__email:focus-within{
     color:var(--color_blue)
 }
-.email_contact:hover{
+.header__email:hover{
     color:var(--color_blue);
 }
-.email_contact:active{
+.header__email:active{
     color: var(--color_blue);
 }
-.icon_sobre{
+.header__sobre{
     width: 16px; 
     height: 16px;
     margin-right: 10px;
     margin-bottom: -2px;
 }
-.icon_cel{
+.header__cel{
     width: 10px; 
     height: 16px;
     margin-right: 10px;
