--- a/css/styles.css
+++ b/css/styles.css
@@ -91,7 +91,7 @@ ul > li{
     
 }
 
-.header__logo{
+.logo{
     color: var(--color_blue);
     font-family: Raleway;
     font-weight: 700;
@@ -528,7 +528,7 @@ ul > li{
     display: flex;
 }
 
-.main__footer{
+.footer{
     background-color: rgba(47, 48, 58, 1);
     padding-top: 60px;
     padding-bottom: 60px;
@@ -540,11 +540,11 @@ ul > li{
     padding-bottom: 60px;
     margin-top: 142px;
 }
-.main__address{
+.address{
     display: flex;
     flex-direction:row;
 }
-.footer_address{
+.footer__address{
     color: var(--color_white);
     font-family: inherit;
     font-weight: 400;
@@ -556,7 +556,7 @@ ul > li{
     height: 21px;
 }
 
-.footer_iconos{
+.footer__iconos-redes{
     fill:var(--color_gray);
     cursor: pointer;
     display:flex;
@@ -568,7 +568,7 @@ ul > li{
     padding-left: 0px;
     
 }
-.footer_contact{
+.footer__contact{
     color: var(--color_footer);
     font-family: inherit;
     font-weight: 400;
@@ -579,22 +579,22 @@ ul > li{
     outline: none;
 
 }
-.footer_address:hover{
+.footer__address:hover{
     color: var(--color_blue);
 }
-.footer_address:focus{
+.footer__address:focus{
     color: var(--color_blue);
 }
-.footer_address:focus-within{
+.footer__address:focus-within{
     color: var(--color_blue);
 }
-.footer_contact:hover{
+.footer__contact:hover{
     color: var(--color_blue);
 }
-.footer_contact:focus{
+.footer__contact:focus{
     color: var(--color_blue);
 }
-.footer_contact:focus-within{
+.footer__contact:focus-within{
     color: var(--color_blue);
     outline: none;
 }
@@ -603,14 +603,14 @@ ul > li{
     height: 20px;
     width: 20px;
 }
-.logo_footer{
+.footer__logo{
     display: flex;
     justify-content: center;
     margin-right: 93px;
     padding-right: 0px;
 
 }
-.Contact_redes{
+.footer__redes{
     color:var(--color_white);
     font-size: 14px;
     font-weight: 700;
@@ -622,11 +622,11 @@ ul > li{
     margin-right: 182px;
     
 }
-.container_address{
+.footer__list{
     width: 231px;
 }
 
-.bg_footer{
+.footer__iconos-fondo{
     height: 40px;
     width: 40px;
     align-items: center;
@@ -635,34 +635,34 @@ ul > li{
     background-color: rgba(255, 255, 255, 0.10);
     border-radius: 50%;
 }
-.bg_footer:hover{
+.footer__iconos-fondo:hover{
     fill:var(--color_white);
     background-color: var(--color_icono_cliente_blue);
     border-radius: 50%;
 }
-.bg_footer:focus{
+.footer__iconos-fondo:focus{
     fill:var(--color_white);
     background-color: var(--color_icono_cliente_blue);
     border-radius: 50%;
 }
-.bg_footer:focus-within{
+.footer__iconos-fondo:focus-within{
     fill:var(--color_white);
     background-color: var(--color_icono_cliente_blue);
     border-radius: 50%;
 }
-.svg_foter{
+.footer__iconos-items{
     height: 20px;
     width: 20px;
     fill: var(--color_white);
     
 }
-.footer_suscripcion{
+.footer__suscripcion-email{
     display: flex;
 }
-.footer_label{
+.footer__label{
     position: relative;
 }
-.footer_suscriptor{
+.footer__suscriptor{
     color: #FFF;
     font-family: Roboto;
     font-size: 14px;
@@ -675,7 +675,7 @@ ul > li{
     width: 275px;
     outline: none;
 }
-.footer_email{
+.footer__email{
     width: 358px;
     height: 50px;
     outline: none;
@@ -688,16 +688,16 @@ ul > li{
     position: absolute;
     padding-left: 16px;
 }
-.footer_email:hover{
+.footer__email:hover{
     border: 1px solid #2196F3;
 }
-.footer_email:focus{
+.footer__email:focus{
     border: 1px solid #2196F3;
 }
-.footer_email:focus-within{
+.footer__email:focus-within{
     border: 1px solid #2196F3;
 }
-.boton_footer{
+.footer__button{
     color: #FFF;
     text-align: center;
     font-family: Roboto;
@@ -717,7 +717,7 @@ ul > li{
     outline: none;
     cursor: pointer;
 }
-.footer_icon_suscrition{
+.footer__suscripcion-item{
     position: relative;
     fill: var(--color_white);
     top: 13px;
@@ -916,7 +916,7 @@ ul > li{
     margin: 0;
     
 }
-.formulario{
+.modal__formulario{
     padding-top: 35px;
     padding-left: 40px;
     color: #757575;
@@ -928,34 +928,34 @@ ul > li{
     letter-spacing: 0.12px;
     border: 1px solid white;
 }
-.input_group{
+.modal__input-group{
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 
 }
-.input_group:hover > .input_modals {
+.modal__input-group:hover > .modal__inputs {
     border: 1px solid rgba(33, 150, 243, 1);
 
 }
-.input_group:hover > .modal_icons {
+.modal__input-group:hover > .modal_icons {
     fill:var(--color_icono_cliente_blue);
 }
-.input_group:focus > .input_modals {
+.modal__input-group:focus > .modal__inputs {
     border: 1px solid rgba(33, 150, 243, 1);
 
 }
-.input_group:focus > .modal_icons {
+.modal__input-group:focus > .modal_icons {
     fill:var(--color_icono_cliente_blue);
 }
-.input_group:focus-within > .input_modals {
+.modal__input-group:focus-within > .modal__inputs {
     border: 1px solid rgba(33, 150, 243, 1);
 
 }
-.input_group:focus-within > .modal_icons {
+.modal__input-group:focus-within > .modal_icons {
     fill:var(--color_icono_cliente_blue);
 }
 
 
-.input_modals{
+.modal__inputs{
     width: 448px;
     position: relative;
     height: 40px;
@@ -967,7 +967,7 @@ ul > li{
     cursor: pointer;
     outline: none;
 }
-.input_coments{
+.modal__input-coments{
     width: 448px;
     position: relative;
     height: 120px;
@@ -987,10 +987,10 @@ ul > li{
     outline: none;
     resize: none;
 }
-.input_coments:hover{
+.modal__input-coments:hover{
     border: 1px solid rgba(33, 150, 243, 1);
 }
-.input_coments:focus {
+.modal__input-coments:focus {
     border: 1px solid rgba(33, 150, 243, 1);
 }
 
@@ -1026,7 +1026,7 @@ ul > li{
     padding-left: 32px;
     position: relative;
 }
-.boton_modal{
+.modal__button{
     text-align: center;
     font-family: Roboto;
     font-size: 16px;
