--- a/css/styles.css
+++ b/css/styles.css
@@ -728,7 +728,7 @@ ul > li{
 .portafolio{
     display: none;
 }
-.list_button{
+.categories__filter{
     border-style: none;
     display:flex;
     flex-direction: row;
@@ -739,7 +739,7 @@ ul > li{
     padding-bottom: 56px;
     
 }
-.button_item{
+.categories__buttons{
     font-family: inherit;
     border-style: none;
     text-align: center;
@@ -750,55 +750,52 @@ ul > li{
     font-size: 16px;
     border-radius: 4px;
     letter-spacing: 0.05em;
-}
-.button_nav{
     padding: 6px 26px;
 }
-.button_item:focus{
+
+.categories__buttons:focus{
     background-color: var(--color_blue);
     color: var(--color_white);
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
 
 }
-.button_item:hover{
+.categories__buttons:hover{
     background-color: var(--color_blue);
     color: var(--color_white);
     font-family: inherit;
     cursor: pointer;
-    line-height: 1.6;
     font-weight: 500;
     size: 16px;
-    letter-spacing: 0.03em;
     box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
 }
-.card_photo{
+.cards__list{
     display: flex;
     flex-wrap: wrap;
     cursor: pointer;
     gap: 30px;
     border-radius: 4px;
 }
-.border{
+.cards__border{
     width: 370px;
     
 }
-.border:hover{
+.cards__border:hover{
     box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
     
 }
-.border:focus{
+.cards__border:focus{
     box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
     
 }
-.border:focus-within{
+.cards__border:focus-within{
     box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
     
 }
-.tarjetas_container{
+.cards__images{
     position: relative;
     overflow: hidden;
 }
-.card_text{
+.card__text{
     position: absolute;
     font-style: normal;
     text-align: center;
@@ -818,11 +815,11 @@ ul > li{
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)250ms
     
 }
-.border:hover > .tarjetas_container > .card_text{
+.cards__border:hover > .cards__images > .card__text{
     transform: translateY(-100%);
 }
 
-.proyect_name{
+.cards__name{
     color: var(--color_black);
     font-family: inherit;
     text-align: left;
