--- a/sass/main.scss
+++ b/sass/main.scss
@@ -209,3 +209,158 @@ ul > li{
     padding-right: 15px;
     margin: auto;
 }
+/*comienza el main en sass*/
+.head__background{
+    color: $color_white;
+    background-color: $color_black;
+    text-align:center;
+    &-imagen{
+        background-image: linear-gradient(to bottom,rgba(47, 48, 58, 0.4),rgba(0, 0, 0, 0.4)),
+            url("../images/services/bg_imagen.jpg");
+        background-size: cover;
+        background-position: bottom center;
+    }   
+}
+.head__title{
+    font-family: inherit;
+    text-align: center;
+    display: flex;
+    margin-left: 260px;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    letter-spacing: 0.06em;
+    padding-top: 200px;
+    width: 696px;
+    margin-top: 0px
+}
+.head__button{
+    color: $color_white;
+    background-color: $color_blue;
+    cursor: pointer;
+    display: inline-flex;
+    border-radius: 4px;
+    width: 261px;
+    height: 50px;
+    margin-bottom: 200px;
+    gap: 10px;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
+    outline: none;
+}
+.head__button:hover{
+    box-shadow: rgb(0, 0, 0) 0px 4px 4px 0px;
+    &:focus-within
+    &:focus
+    {
+        box-shadow: rgb(0, 0, 0) 0px 4px 4px 0px;
+    }
+}
+.about{
+    &__list{
+        font-family: 'Roboto';
+        margin: auto;
+        display: flex;
+        flex-wrap: wrap;
+        width: 1200px;
+        padding-top: 82px;
+        column-gap: 30px;
+    }
+    &__images{
+        width: 270px;
+        padding-right: 100px;
+        padding-left: 100px;
+    }
+}
+.about__title{
+    color:$color_black;
+    font-family: inherit;
+    font-weight: 700;
+    line-height: 1.1;
+    font-size: 14px;
+    letter-spacing: 0.03em;
+    margin-top: 30px;
+    margin-bottom: 10px;
+    &:hover{
+        color:$color_gray;
+    }
+}
+.about{
+    &__text{
+    font-family:inherit;
+    font-style: normal;
+    color:$color_gray;
+    font-weight: 400;
+    line-height: 1.7;
+    size: 14px;
+    letter-spacing: 0.03em;
+}
+    &__container{
+        margin: auto;
+        width: 270px;
+    }
+}
+.services{
+    margin: auto;
+    justify-content: center;
+    &__title{
+        color:$color_black;
+        font-family: inherit;
+        text-align:center;
+        font-weight: 700;
+        line-height: 1.16;
+        font-size: 36px;
+        letter-spacing: 0.03em;
+        padding-bottom: 50px;
+        margin-top: 99px;
+    }
+    &__list{
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        width: 1200px;
+        column-gap: 37px;
+        position: relative;
+    }
+}
+.services{
+    &__list{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 1200px;
+    column-gap: 37px;
+    position: relative;
+    }
+    &__images{
+        position: relative;
+    }
+    &__text{
+        position: absolute;
+        color: $color_white;
+        text-align: center;
+        font-family: inherit;
+        line-height: normal;
+        font-style: normal;
+        font-size: 14px;
+        font-weight: 700;
+        letter-spacing: 0.42px;
+        width: 372px;
+        height: 70px;
+        bottom: 3px;
+        background: rgba(47, 48, 58, 0.80);
+        padding-top: 27px;
+    }
+}
+.team__title{
+    color: var(--color_black);
+    font-family: inherit;
+    text-align:center;
+    font-weight: 700;
+    line-height: 1.16;
+    font-size: 36px;
+    letter-spacing: 0.03em;
+    padding-bottom: 50px;
+    margin-top: 188px;
+}
