--- a/sass/main.css
+++ b/sass/main.css
@@ -152,13 +152,7 @@ ul > li {
   cursor: pointer;
   fill: rgb(117, 117, 117);
 }
-.header__contact-list:hover {
-  fill: rgb(33, 150, 243);
-}
-.header__contact-list:focus {
-  fill: rgb(33, 150, 243);
-}
-.header__contact-list :focus-within {
+.header__contact-list:hover, .header__contact-list:focus, .header__contact-list:focus-within {
   fill: rgb(33, 150, 243);
 }
 
@@ -184,10 +178,7 @@ ul > li {
   color: rgb(117, 117, 117);
   outline: none;
 }
-.header__email:focus {
-  color: rgb(33, 150, 243);
-}
-.header__email:focus-within {
+.header__email:focus, .header__email:focus-within {
   color: rgb(33, 150, 243);
 }
 
@@ -263,7 +254,7 @@ ul > li {
 .head__button:hover {
   box-shadow: rgb(0, 0, 0) 0px 4px 4px 0px;
 }
-.head__button:hover:focus-within .head__button:hover:focus {
+.head__button:hover:focus-within, .head__button:hover:focus {
   box-shadow: rgb(0, 0, 0) 0px 4px 4px 0px;
 }
 
@@ -365,8 +356,12 @@ ul > li {
   padding-top: 27px;
 }
 
+.team {
+  display: flex;
+  flex-wrap: wrap;
+}
 .team__title {
-  color: var(--color_black);
+  color: rgb(33, 33, 33);
   font-family: inherit;
   text-align: center;
   font-weight: 700;
@@ -375,4 +370,608 @@ ul > li {
   letter-spacing: 0.03em;
   padding-bottom: 50px;
   margin-top: 188px;
+}
+
+.team__cards-shadow {
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  border-radius: 0px 0px 4px 4px;
+  padding-bottom: 30px;
+  width: 270px;
+  height: 428px;
+}
+.team__card {
+  width: 270px;
+  height: 428px;
+}
+
+.team__cards {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  gap: 37px;
+}
+.team__subtitle {
+  color: rgb(117, 117, 117);
+  font-family: inherit;
+  text-align: center;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  margin-bottom: 24px;
+  height: 19px;
+  width: 270px;
+}
+
+.team__name {
+  color: rgb(33, 33, 33);
+  font-family: inherit;
+  text-align: center;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  height: 19px;
+}
+.team__redes {
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 270px;
+  padding-left: 0px;
+  fill: rgb(117, 117, 117);
+}
+.team__items {
+  height: 20px;
+  width: 20px;
+}
+
+.team__redes--fondo {
+  height: 40px;
+  width: 40px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  fill: rgb(175, 177, 184);
+}
+.team__redes--fondo:hover, .team__redes--fondo:focus, .team__redes--fondo:focus-within {
+  fill: rgb(255, 255, 255);
+  background-color: rgb(33, 150, 243);
+  border-radius: 50%;
+}
+
+.clientes__title {
+  color: rgb(33, 33, 33);
+  font-family: inherit;
+  text-align: center;
+  font-weight: 700;
+  line-height: 1.16;
+  font-size: 36px;
+  letter-spacing: 0.03em;
+  padding-bottom: 50px;
+  margin-top: 99px;
+}
+.clientes__list {
+  width: 1200px;
+  padding-left: 0px;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  fill: rgb(175, 177, 184);
+}
+
+.clientes__items {
+  width: 170px;
+  height: 53px;
+  padding: 8.7px 10.564px 3.503px 11px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+
+.clientes__cards--border {
+  width: 170px;
+  height: 71px;
+  border-radius: 4px;
+  border: 1px solid rgb(175, 177, 184);
+  justify-content: center;
+  display: flex;
+}
+.clientes__cards--border:hover, .clientes__cards--border:focus, .clientes__cards--border:focus-within {
+  border-color: rgb(33, 150, 243);
+  fill: rgb(33, 150, 243);
+}
+
+.clientes_links {
+  fill: var(--color_icon_gray);
+  outline-color: var(--color_blue);
+}
+.clientes_links:hover, .clientes_links:focus, .clientes_links:focus-within {
+  fill: rgb(33, 150, 243);
+  outline-color: rgb(33, 150, 243);
+}
+
+/*comienza el footer con sass*/
+.footer {
+  background-color: rgb(47, 48, 58);
+  padding-top: 60px;
+  padding-bottom: 60px;
+  margin-top: 151px;
+}
+.footer__address {
+  color: rgb(255, 255, 255);
+  font-family: inherit;
+  font-weight: 400;
+  size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  outline: none;
+  width: 231px;
+  height: 21px;
+}
+
+.footer__address:hover {
+  color: rgb(33, 150, 243);
+}
+.footer__address:hover:focus, .footer__address:hover:focus-within {
+  color: rgb(33, 150, 243);
+}
+
+.main__footer_portafolio {
+  background-color: rgb(47, 48, 58);
+  padding-top: 60px;
+  padding-bottom: 60px;
+  margin-top: 142px;
+}
+
+.address {
+  display: flex;
+  flex-direction: row;
+}
+
+.footer__iconos-redes {
+  fill: rgb(117, 117, 117);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 270px;
+  margin-left: 135px;
+  margin-top: 13px;
+  padding-left: 0px;
+}
+.footer__contact {
+  color: rgba(255, 255, 255, 0.6);
+  font-family: inherit;
+  font-weight: 400;
+  size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  padding-bottom: 60px;
+  outline: none;
+}
+
+.footer__contact:hover {
+  color: rgb(33, 150, 243);
+}
+.footer__contact:hover:focus, .footer__contact:hover:focus-within {
+  color: rgb(33, 150, 243);
+  outline: none;
+}
+
+.footer__list {
+  width: 231px;
+}
+.footer__logo {
+  display: flex;
+  justify-content: center;
+  margin-right: 93px;
+  padding-right: 0px;
+}
+.footer__redes {
+  color: rgb(255, 255, 255);
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1.1;
+  display: flex;
+  width: 135px;
+  padding-left: 0px;
+  margin-left: 64px;
+  margin-right: 182px;
+}
+
+.footer__iconos-fondo {
+  height: 40px;
+  width: 40px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
+.footer__iconos-fondo:hover {
+  fill: rgb(255, 255, 255);
+  background-color: rgb(33, 150, 243);
+  border-radius: 50%;
+}
+
+.footer__iconos-items {
+  height: 20px;
+  width: 20px;
+  fill: rgb(255, 255, 255);
+}
+.footer__suscripcion-email {
+  display: flex;
+}
+
+.footer__label {
+  position: relative;
+}
+.footer__suscriptor {
+  color: rgb(255, 255, 255);
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  letter-spacing: 0.42px;
+  width: 350px;
+  margin-left: 0px;
+  width: 275px;
+  outline: none;
+}
+
+.footer__email {
+  width: 358px;
+  height: 50px;
+  outline: none;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background: rgba(33, 150, 243, 0);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  margin-left: 70px;
+  color: var(--color_white);
+  position: absolute;
+  padding-left: 16px;
+}
+.footer__email:hover, .footer__email:focus, .footer__email:focus-within {
+  border: 1px solid rgb(33, 150, 243);
+}
+
+.footer__button {
+  color: #FFF;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px; /* 187.5% */
+  letter-spacing: 0.96px;
+  width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  background: rgb(33, 150, 243);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  margin-left: 442px;
+  padding-right: 72px;
+  padding-left: 39px;
+  outline: none;
+  cursor: pointer;
+}
+.footer__suscripcion-item {
+  position: relative;
+  fill: rgb(255, 255, 255);
+  top: 13px;
+  right: 45px;
+  cursor: pointer;
+}
+
+/*fomulario modal en sass*/
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms, visibility 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.is-hidden {
+  display: none;
+}
+
+.close-button {
+  width: 30px;
+  height: 30px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  position: absolute;
+  visibility: visible;
+  padding: 5px 6px 5px 5px;
+  justify-items: center;
+  top: 8px;
+  right: 8px;
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms, visibility 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+.close-button:focus, .close-button:hover {
+  fill: rgb(33, 150, 243);
+  cursor: pointer;
+  outline: none;
+}
+
+.modal {
+  width: 528px;
+  height: 581px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  background-color: rgb(255, 255, 255);
+  border-radius: 4px;
+  transform: translate(-50%, -50%);
+  box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.12), 0px 4px 4px 0px rgba(0, 0, 0, 0.14), 0px 1px 1px 0px rgba(0, 0, 0, 0.2);
+}
+.modal_text {
+  color: rgb(33, 33, 33);
+  text-align: center;
+  line-height: normal;
+  font-family: Roboto;
+  font-style: normal;
+  font-size: 20px;
+  font-weight: 700;
+  letter-spacing: 0.6px;
+  height: 23px;
+  padding-top: 40px;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin: 0;
+}
+.modal__formulario {
+  padding-top: 35px;
+  padding-left: 40px;
+  color: rgb(117, 117, 117);
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.12px;
+  border: 1px solid white;
+}
+
+.modal__input-group {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+.modal__input-group:hover > .modal_icons {
+  fill: rgb(33, 150, 243);
+}
+.modal__input-group:hover > .modal__inputs {
+  border: 1px solid rgb(33, 150, 243);
+}
+
+.modal__input-group:focus > .modal__inputs {
+  border: 1px solid rgb(33, 150, 243);
+}
+.modal__input-group:focus > .modal__inputs:focus > .modal_icons {
+  fill: rgb(33, 150, 243);
+}
+
+.modal__input-group:focus-within > .modal__inputs {
+  border: 1px solid rgb(33, 150, 243);
+}
+.modal__input-group:focus-within > .modal__inputs:focus-within > .modal_icons {
+  fill: rgb(33, 150, 243);
+}
+
+.modal__inputs {
+  width: 448px;
+  position: relative;
+  height: 40px;
+  padding-left: 40px;
+  margin-top: 4px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  cursor: pointer;
+  outline: none;
+}
+.modal_icons {
+  position: absolute;
+  left: 52px;
+  justify-content: center;
+  align-items: center;
+  margin-top: 15px;
+  cursor: pointer;
+}
+
+.modal__input-coments {
+  width: 448px;
+  position: relative;
+  height: 120px;
+  margin-top: 4px;
+  padding-right: 15px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  color: rgba(117, 117, 117, 0.5);
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.12px;
+  padding-left: 15px;
+  margin-bottom: 15px;
+  outline: none;
+  resize: none;
+}
+.modal__input-coments:hover, .modal__input-coments:focus {
+  border: 1px solid rgb(33, 150, 243);
+}
+
+.input_check {
+  width: 16px;
+  height: 15px;
+  bottom: 63px;
+  left: 12px;
+  position: relative;
+  cursor: pointer;
+  outline: none;
+}
+
+.check_text {
+  color: rgb(117, 117, 117);
+  font-family: Roboto;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.7; /* 171.429% */
+  letter-spacing: 0.42px;
+  width: 403px;
+  height: 24px;
+  display: flex;
+  padding-left: 32px;
+  position: relative;
+}
+
+.modal__button {
+  text-align: center;
+  font-family: Roboto;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 30px; /* 187.5% */
+  letter-spacing: 0.96px;
+  width: 200px;
+  height: 50px;
+  border-radius: 4px;
+  color: rgb(255, 255, 255);
+  background: rgb(24, 140, 232);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+  border: none;
+  padding-left: 0px;
+  margin-left: 100px;
+  margin-top: 15px;
+  outline: none;
+}
+
+/*inicio pagina portfolio en sass */
+.portafolio {
+  display: none;
+}
+
+.categories {
+  color: rgb(117, 117, 117);
+  font-family: inherit;
+  text-align: left;
+  padding-left: 24px;
+  font-weight: 400;
+  size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.03em;
+  height: 322;
+  width: 30;
+}
+.categories__filter {
+  border-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  font-weight: 500px;
+  padding-top: 106px;
+  gap: 8px;
+  padding-bottom: 56px;
+}
+
+.categories__buttons {
+  font-family: inherit;
+  border-style: none;
+  text-align: center;
+  outline: none;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  font-size: 16px;
+  border-radius: 4px;
+  letter-spacing: 0.05em;
+  padding: 6px 26px;
+}
+.categories__buttons:focus {
+  background-color: rgb(33, 150, 243);
+  color: rgb(255, 255, 255);
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
+}
+.categories__buttons:hover {
+  background-color: rgb(33, 150, 243);
+  color: rgb(255, 255, 255);
+  font-family: inherit;
+  cursor: pointer;
+  font-weight: 500;
+  size: 16px;
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 1px 2px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
+}
+
+.cards__list {
+  display: flex;
+  flex-wrap: wrap;
+  cursor: pointer;
+  gap: 30px;
+  border-radius: 4px;
+}
+.cards__images {
+  position: relative;
+  overflow: hidden;
+}
+
+.card__text {
+  position: absolute;
+  font-style: normal;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  color: rgb(255, 255, 255);
+  background-color: rgba(33, 150, 243, 0.9);
+  font-family: inherit;
+  padding: 63px 24px;
+  width: 370px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.54px;
+  margin: 0px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1) 250ms;
+}
+
+.cards__border {
+  width: 370px;
+}
+.cards__border:hover, .cards__border:focus, .cards__border:focus-within {
+  box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16), 0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+}
+.cards__border:hover > .cards__images > .card__text {
+  transform: translateY(-100%);
+}
+
+.cards__name {
+  color: rgb(33, 33, 33);
+  font-family: inherit;
+  text-align: left;
+  letter-spacing: auto;
+  font-style: normal;
+  text-align: left;
+  font-weight: 700;
+  padding-left: 24px;
+  font-size: 18px;
+  line-height: 2;
+  height: 322;
+  width: 36;
 }/*# sourceMappingURL=main.css.map */
